--- a/src/Containers/Tappat/Tappat.module.css
+++ b/src/Containers/Tappat/Tappat.module.css
@@ -1,7 +1,8 @@
 .Tappat {
     width: 100%;
+    justify-content: center;
     display: flex;
-    flex-flow: row;
+    flex-flow: row wrap;
     box-sizing: border-box;
     padding: 0 10px;
 }
